fix: add eqaul stretching for opportunities

--- a/sass/components/opportunities/_opportuninities.scss
+++ b/sass/components/opportunities/_opportuninities.scss
@@ -67,11 +67,9 @@
 
     &__title {
       font-size: 34px;
-      width: 60%;
     }
     &__description {
       font-size: 18px;
-      width: 80%;
     }
     &__image {
       top: 0;
@@ -96,11 +94,19 @@
   .opportunities {
     &__cards {
       display: flex;
+      padding: 0;
+      gap: 15px;
     }
   }
 
   .opportunity {
-    padding: 60px 30px 60px 30px;
+    flex: 1;
+    padding: 220px 30px 60px 30px;
+    &__image {
+      top: -100px;
+      left: 50%;
+      transform: translateX(-50%);
+    }
     &__image--cat-house {
       height: 320px;
     }
